--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Ponder",
-    "description": "An extension for preventing distractions by making it more difficult to use websites such as Youtube",
+    "name": "Focus Mode",
+    "description": "Enable focus mode on Chrome's official Extensions and Chrome Web Store documentation.",
     "version": "1.0",
     "icons": {
       "16": "images/icon-16.png",
@@ -10,17 +10,23 @@
       "128": "images/icon-128.png"
     },
     "background": {
-        "service_worker": "background.js"
-      },
-
-      "action": {
-        "default_icon": {
-          "16": "images/icon-16.png",
-          "32": "images/icon-32.png",
-          "48": "images/icon-48.png",
-          "128": "images/icon-128.png"
+      "service_worker": "background.js"
+    },
+    "action": {
+      "default_icon": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+      }
+    },
+    "permissions": ["scripting", "activeTab"],
+    "commands": {
+      "_execute_action": {
+        "suggested_key": {
+          "default": "Ctrl+U",
+          "mac": "Command+U"
         }
-      },
-
-      "permissions": ["activeTab", "scripting"]
+      }
+    }
   }
