--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Focus Mode",
-    "description": "Enable focus mode on Chrome's official Extensions and Chrome Web Store documentation.",
+    "name": "Ponder",
+    "description": "An extension for preventing distractions by making it more difficult to use websites such as Youtube",
     "version": "1.0",
     "icons": {
       "16": "images/icon-16.png",
