--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,14 @@
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
     },
-    "background": {
-      "service_worker": "main.js"
-    },
+    "content_scripts": [
+        {
+          "js": ["main.js"],
+          "matches": [
+            "https://www.youtube.com/"
+          ]
+        }
+      ],
     "action": {
       "default_icon": {
         "16": "images/icon-16.png",
