--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,9 @@
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
     },
-    "content_scripts": [
-        {
-          "js": ["main.js"],
-          "matches": [
-            "https://www.youtube.com/"
-          ]
-        }
-      ],
+    "background": {
+        "service_worker": "main.js"
+      },
     "action": {
       "default_icon": {
         "16": "images/icon-16.png",
